// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge > renders danger variant 1`] = `
<span
  class="bg-game-status-out text-white rounded-[6px] px-2 py-[1px] ml-1.5 text-[0.8em] font-bold"
>
  容疑者
</span>
`;

exports[`StatusBadge > renders success variant 1`] = `
<span
  class="bg-game-status-active text-white rounded-[6px] px-2 py-[1px] ml-1.5 text-[0.8em]"
>
  上がり
</span>
`;

exports[`StatusBadge > renders warning variant 1`] = `
<span
  class="bg-game-status-waiting text-game-text-strong rounded-[6px] px-2 py-[1px] ml-1.5 text-[0.8em] font-bold"
>
  考え中...
</span>
`;
